header vertical alignment fixed #1

--- a/resources/capstone_colmar_assets/style.css
+++ b/resources/capstone_colmar_assets/style.css
@@ -9,10 +9,11 @@ body {
   background-color: white;
 }
 
+/*HEADER*/
+
 header {
   width: 100%;
   height: 64px;
-  align-items: center;
   top: 0;
   padding: 0 24px;
 }
@@ -22,8 +23,18 @@ header {
 .header--left .header-big-text,
 .header--left .header-big-text h3,
 .header--right,
-.header--right ul li {
+.header--right ul,
+.header--right ul li,
+.header--right ul li h4 {
   display: inline-block;
+  vertical-align: middle;
+}
+
+.header--left .header-big-text h3,
+.header--right ul li h4 {
+  position: static;
+  line-height: 32px;
+  text-align: center;
 }
 
 .header--left,
@@ -32,21 +43,23 @@ header {
   padding-bottom: 16px;
 }
 
-.header--left img {
+.header--left img,
+.header-big-text,
+.header--right ul,
+.header--right ul li {
   height: 32px;
+}
+
+.header--right li {
+  margin: 0 16px;
+  margin-right: 0;
 }
 
 .header--right {
   float: right;
 }
 
-header h3 {
-  font-size: 32px;
-}
-
-header h5 {
-  font-size: ;
-}
+/*SECTION 1*/
 
 .section-first {
   background-color: #ccc;
